<?xml version="1.0"?>
<package>
  <name>hello_arduino</name>
  <version>0.0.0</version>
  <description>Very simple demonstration of a rosserial arduino package.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <run_depend>avrdude</run_depend>
  <run_depend>rosserial_server</run_depend>

  <export></export>
</package>
